# opengl_arch_linux_sample

./: CMakeLists.txt  README.md  glad.c  glad.h  main.cpp
src/: triangle_mesh.cpp
src/shaders/: fragment.glsl  vertex.glsl
